; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_PARSER_string_substA.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/setupapi/extr_parser.c_PARSER_string_substA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inf_file = type { i32 }

@MAX_STRING_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inf_file*, i32*, i8*, i32)* @PARSER_string_substA to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PARSER_string_substA(%struct.inf_file* %0, i32* %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.inf_file*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32, align 4
  store %struct.inf_file* %0, %struct.inf_file** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %13 = load i32, i32* @MAX_STRING_LEN, align 4
  %14 = add nsw i32 %13, 1
  %15 = zext i32 %14 to i64
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %9, align 8
  %17 = alloca i32, i64 %15, align 16
  store i64 %15, i64* %10, align 8
  %18 = load %struct.inf_file*, %struct.inf_file** %5, align 8
  %19 = load i32*, i32** %6, align 8
  %20 = mul nuw i64 4, %15
  %21 = udiv i64 %20, 4
  %22 = trunc i64 %21 to i32
  %23 = call i32 @PARSER_string_substW(%struct.inf_file* %18, i32* %19, i32* %17, i32 %22)
  store i32 %23, i32* %12, align 4
  %24 = load i8*, i8** %7, align 8
  %25 = icmp ne i8* %24, null
  br i1 %25, label %32, label %26

26:                                               ; preds = %4
  %27 = load i32, i32* %12, align 4
  %28 = zext i32 %27 to i64
  %29 = mul i64 %28, 4
  %30 = trunc i64 %29 to i32
  %31 = call i32 @RtlUnicodeToMultiByteSize(i64* %11, i32* %17, i32 %30)
  br label %44

32:                                               ; preds = %4
  %33 = load i8*, i8** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = sub i32 %34, 1
  %36 = load i32, i32* %12, align 4
  %37 = zext i32 %36 to i64
  %38 = mul i64 %37, 4
  %39 = trunc i64 %38 to i32
  %40 = call i32 @RtlUnicodeToMultiByteN(i8* %33, i32 %35, i64* %11, i32* %17, i32 %39)
  %41 = load i8*, i8** %7, align 8
  %42 = load i64, i64* %11, align 8
  %43 = getelementptr inbounds i8, i8* %41, i64 %42
  store i8 0, i8* %43, align 1
  br label %44

44:                                               ; preds = %32, %26
  %45 = load i64, i64* %11, align 8
  %46 = trunc i64 %45 to i32
  %47 = load i8*, i8** %9, align 8
  call void @llvm.stackrestore(i8* %47)
  ret i32 %46
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @PARSER_string_substW(%struct.inf_file*, i32*, i32*, i32) #2

declare dso_local i32 @RtlUnicodeToMultiByteSize(i64*, i32*, i32) #2

declare dso_local i32 @RtlUnicodeToMultiByteN(i8*, i32, i64*, i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
